--- a/test.yml
+++ b/test.yml
@@ -4,3 +4,16 @@
   tasks:
   - debug:
       var: ansible_user
+
+  - add_host:
+      name: bastion.c2cz2.sandbox755.opentlc.com
+      groups: bastions
+      ansible_user: ec2-user
+      ansible_ssh_private_key_file: opentlc_admin_backdoor
+      ansible_ssh_extra_args: -o StrictHostKeyChecking=no
+
+- hosts: bastions
+  gather_facts: false
+  tasks:
+  - debug:
+      var: ansible_user
