--- a/test.yml
+++ b/test.yml
@@ -9,7 +9,7 @@
       name: bastion.c2cz2.sandbox755.opentlc.com
       groups: bastions
       ansible_user: ec2-user
-      ansible_ssh_private_key_file: opentlc_admin_backdoor
+      ansible_ssh_private_key_file: ~/.ssh/opentlc_admin_backdoor.pem
       ansible_ssh_extra_args: -o StrictHostKeyChecking=no
 
 - hosts: bastions
