Set ansible_python_interpreter

--- a/test.yml
+++ b/test.yml
@@ -12,6 +12,10 @@
 - hosts: bastions
   gather_facts: false
   tasks:
+  - name: Set Ansible Python interpreter to k8s virtualenv
+    set_fact:
+      ansible_python_interpreter: /opt/virtualenvs/k8s/bin/python
+
   - name: Ensure htpasswd Secret is absent
     k8s:
       state: absent
