--- a/test.yml
+++ b/test.yml
@@ -3,7 +3,7 @@
   gather_facts: false
   tasks:
   - add_host:
-      name: bastion.cvdbf.sandbox526.opentlc.com
+      name: bastion.rlc6c.sandbox1323.opentlc.com
       groups: bastions
       ansible_user: ec2-user
       ansible_ssh_private_key_file: ~/.ssh/opentlc_admin_backdoor.pem
