--- a/test.yml
+++ b/test.yml
@@ -3,7 +3,7 @@
   gather_facts: false
   tasks:
   - add_host:
-      name: bastion.l4rqh.sandbox894.opentlc.com
+      name: bastion.9bt9l.sandbox668.opentlc.com
       groups: bastions
       ansible_user: ec2-user
       ansible_ssh_private_key_file: ~/.ssh/opentlc_admin_backdoor.pem
@@ -15,7 +15,7 @@
   environment:
     KUBECONFIG: /home/{{ ansible_user }}/{{ cluster_name }}/auth/kubeconfig
   vars:
-    cluster_name: cluster-l4rqh
+    cluster_name: cluster-9bt9l
   tasks:
   - name: Set Ansible Python interpreter to k8s virtualenv
     set_fact:
