--- a/test.yml
+++ b/test.yml
@@ -12,10 +12,12 @@
   - command: >-
       ansible-galaxy install
       -r {{ playbook_dir }}/r.yml
+      -p roles
 
   - command: >-
       ansible-galaxy collection install
       -r {{ playbook_dir }}/r.yml
+      -p collections
 
 - hosts: bastions
   run_once: true
